--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <link rel="stylesheet" href="" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -22,6 +27,11 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
+
+    <button id="canvas_4_3" type="button">4:3</button>
+    <button id="canvas_16_9" type="button">16:9</button>
+    <button id="canvas_9_16" type="button">9:16</button>
+    <button id="canvas_1_1" type="button">1:1</button>
 
     <div class="slidecontainer">
       <p>rotation</p>
@@ -34,10 +44,25 @@
         class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700"
       />
     </div>
-    <canvas
-      id="canvas"
-      style="width: 100vw; height: 80vh; display: block"
-    ></canvas>
+    <div
+      id="canvas_holder"
+      style="
+        display: flex;
+        width: 100%;
+        height: 600px;
+        align-items: center;
+        justify-content: center;
+      "
+    >
+      <canvas id="canvas" style="width: 100%; height: 100%"></canvas>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <script type="module" src="webgl.js" async defer></script>
   </body>
